[package]
name = "pando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
reqwest = {version = "0.11.12",  features = ["stream", 'json']}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3"
# jwt-simple = "0.10"
serde = { version = "1.0", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
gcp_auth = "0.7.4"
