[package]
name = "pando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "network-address"] }
dotenvy = "0.15"
reqwest = {version = "0.11.12",  features = ["stream", 'json', 'multipart']}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
# jwt-simple = "0.10"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt = "0.16.0"
sha2 = "0.10"
url-escape = "0.1.1"
chrono = "0.4"
hex = "0.4.3"
rsa = "0.7.1"
rand = "0.8.5"
ring = "0.16.20"
gcp_auth = "0.7.4"
actix-web = "4"
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
ipnetwork = "0.20.0"
clap = { version = "4.0.22", features = ["derive"] }
urlencoding = "2.1.2"
serde_yaml = "0.9.14"
inquire = "0.5.2"
